// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AftaScanResultsToUnifiedRules Null ScanResults input returns empty output 1`] = `[]`;

exports[`AftaScanResultsToUnifiedRules ScanResults with 1 supported rule 1`] = `
[
  {
    "description": "This describes Rule #1",
    "guidance": [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": "rule-link",
  },
]
`;

exports[`AftaScanResultsToUnifiedRules ScanResults with 1 supported rule that repeats 1`] = `
[
  {
    "description": "This describes Rule #1",
    "guidance": [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": "rule-link",
  },
]
`;

exports[`AftaScanResultsToUnifiedRules ScanResults with a mix of supported and unsupported rules, some repeating 1`] = `
[
  {
    "description": "This describes Rule #1",
    "guidance": [],
    "id": "Rule #1",
    "uid": "gguid-mock-stub",
    "url": "rule-link",
  },
  {
    "description": "This describes Rule #3",
    "guidance": [
      {
        "href": "https://www.w3.org/WAI/WCAG21/Understanding/non-text-content.html",
        "tags": [],
        "text": "WCAG 1.1.1",
      },
    ],
    "id": "Rule #3",
    "uid": "gguid-mock-stub",
    "url": "rule-link-3",
  },
  {
    "description": "This describes Rule #2",
    "guidance": [],
    "id": "Rule #2",
    "uid": "gguid-mock-stub",
    "url": "rule-link",
  },
]
`;

exports[`AftaScanResultsToUnifiedRules ScanResults with no CheckResults returns empty output 1`] = `[]`;

exports[`AftaScanResultsToUnifiedRules ScanResults with only unsupported rules 1`] = `[]`;
